name:                loi
version:             0.0.1
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      LOI

  build-depends:        base >= 4.6,
                        ivory,
                        ivory-stdlib

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
